# VPhysics-Box3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.md
.github/workflows/: ci.yml
box3d/: box3d_avx2.vpc  box3d_inc.vpc  box3d_settings.vpc  box3d_sse2.vpc  box3d_sse42.vpc
sdk/: CMakeLists.txt
vpc_scripts/: vbox3d_groups.vgc  vbox3d_projects.vgc
vphysics_box3d/: CMakeLists.txt  cbase.h  vbox_collide.cpp  vbox_collide.h  vbox_constraints.cpp  vbox_constraints.h  vbox_controller_fluid.cpp  vbox_controller_fluid.h  vbox_controller_motion.cpp  vbox_controller_motion.h  vbox_controller_player.cpp  vbox_controller_player.h  vbox_controller_shadow.cpp  vbox_controller_shadow.h  vbox_controllers.cpp  vbox_controllers.h  vbox_environment.cpp  vbox_environment.h  vbox_friction.cpp  vbox_interface.cpp  vbox_interface.h  vbox_keyvalues_schema.cpp  vbox_keyvalues_schema.h  vbox_object.cpp  vbox_object.h  vbox_objectpairhash.cpp  vbox_objectpairhash.h  vbox_parse.cpp  vbox_surfaceprops.cpp  vbox_surfaceprops.h  vbox_util.h  vphysics_box3d_avx2.vpc  vphysics_box3d_inc.vpc  vphysics_box3d_sse2.vpc  vphysics_box3d_sse42.vpc
vphysics_box3d/compat/: branch_overrides.h  compat_asw.h  compat_sdk2013.h
vphysics_wrapper/: vphysics_wrapper.cpp  vphysics_wrapper_external.vpc  vphysics_wrapper_inc.vpc  vphysics_wrapper_internal.vpc
